--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <title>Aditya Galande</title>
   <link rel="stylesheet" href="styles.css">
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/70b3ea82a1.js" crossorigin="anonymous"></script>
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <!-- JavaScript Bundle with Popper -->
@@ -15,7 +17,7 @@
   <header>
     <nav class="navbar py-3 fixed-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand mb-0 h1" href="#">ADITYA GALANDE</a>
+        <a class="navbar-brand mb-0" href="#">ADITYA GALANDE</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -25,22 +27,20 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="#">Android</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              <a class="nav-link" href="#">Web</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About me</a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Who I'm</a></li>
+                <li><a class="dropdown-item" href="#">Qualification</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="#">Contact me</a></li>
               </ul>
             </li>
           </ul>
@@ -48,14 +48,22 @@
       </div>
     </nav>
   </header>
-  <section>
-    <div class="titleBackground">
-      <div class="">
-        <h1>Aditya Galande</h1>
+  <div>
+    <section class="titleBackground">
+      <div class="innerTitle">
+        <h1 style="color:white; font-size: 57px;">ADITYA GALANDE's</h1>
+        <p style="color:white;">Adventures in C++, iOS, Unix, and the biggest of all..Life!.</p>
+        <div class="centerdiv">
+          <a class="icons" href="#"><i class="fab fa-2x fa-facebook-f"></i></a>
+          <a class="icons" href="#"><i class="fab fa-2x fa-twitter"></i></a>
+          <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-2x fa-instagram"></i></a>
+          <a class="icons" href="https://github.com/adityagalande" target="_blank"><i class="fab fa-2x fa-github"></i></a>
+          <a class="icons" href="https://www.linkedin.com/in/adityagalande/"><i class="fab fa-2x fa-linkedin-in"></i></a>
+        </div>
       </div>
-    </div>
+    </section>
 
-  </section>
+  </div>
   <footer>
 
   </footer>
