--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
     <nav class="navbar py-3 fixed-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand mb-0" href="#">ADITYA GALANDE</a>
+        <a style="font-size: 28px;" class="navbar-brand mb-0" href="#">ADITYA GALANDE</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -51,13 +51,13 @@
   <div>
     <section class="titleBackground">
       <div class="innerTitle">
-        <h1 style="color:white; font-size: 57px;">ADITYA GALANDE's</h1>
-        <p style="color:white;">Adventures in C++, iOS, Unix, and the biggest of all..Life!.</p>
+        <h1 style="color:white; font-size: 57px;">Hello, I’m Aditya</h1>
+        <p style="color:white; font-size: 23px;">Adventures in C++, iOS, Unix, and the biggest of all..Life!.</p>
         <div class="centerdiv">
           <a class="icons" href="#"><i class="fab fa-2x fa-facebook-f"></i></a>
           <a class="icons" href="#"><i class="fab fa-2x fa-twitter"></i></a>
           <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-2x fa-instagram"></i></a>
-          <a class="icons" href="https://github.com/adityagalande" target="_blank"><i class="fab fa-2x fa-github"></i></a>
+          <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-2x fa-github"></i></a>
           <a class="icons" href="https://www.linkedin.com/in/adityagalande/"><i class="fab fa-2x fa-linkedin-in"></i></a>
         </div>
       </div>
