--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
   <header>
-    <nav class="navbar py-3 fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar py-3 fixed-top navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a style="font-size: 28px;" class="navbar-brand mb-0" href="#">ADITYA GALANDE</a>
+        <a style="font-size: 28px; font-weight: 600;" class="navbar-brand mb-0" href="#">ADITYA GALANDE</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -61,6 +61,22 @@
           <a class="icons" href="https://www.linkedin.com/in/adityagalande/"><i class="fab fa-2x fa-linkedin-in"></i></a>
         </div>
       </div>
+    </section>
+    <section id="xxx">
+
+      <div class="container">
+        <div class="row" style="margin-top: -40px; height: 25rem;">
+          <div class="col col-lg-6 col-md-6 col-sm-12 col-12" style="background-image: url(src/titlebackground.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
+            1 of 2
+          </div>
+          <div class="col col-lg-6 col-md-6 col-sm-12 col-12" style="background-color: blue; display: flex; align-items: center; justify-content: center;">
+            <div class="yyy" style="width: 90%; height: 80%; background-color: pink;">
+
+            </div>
+          </div>
+        </div>
+      </div>
+
     </section>
 
   </div>
