--- a/index.html
+++ b/index.html
@@ -15,24 +15,36 @@
 
 <body>
   <header>
-    <nav class="navbar py-3 fixed-top navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar py-3 fixed-top navbar-expand-lg navbar-dark bg-transparent">
       <div class="container">
-        <a style="font-size: 28px; font-weight: 600;" class="navbar-brand mb-0" href="#">ADITYA GALANDE</a>
+        <!-- <a style="font-size: 28px; font-weight: 600;" class="navbar-brand mb-0" href="#">ADITYA GALANDE</a> -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#titleBack">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Android</a>
+              <a class="nav-link" href="#secAbout">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Web</a>
+              <a class="nav-link" href="#">Skills</a>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Experience</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+            <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About me</a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="#">Who I'm</a></li>
@@ -42,14 +54,14 @@
                 </li>
                 <li><a class="dropdown-item" href="#">Contact me</a></li>
               </ul>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
     </nav>
   </header>
   <div>
-    <section class="titleBackground">
+    <section id="titleBack" class="titleBackground">
       <div class="innerTitle">
         <h1 style="color:white; font-size: 57px;">Hello, I’m Aditya</h1>
         <p style="color:white; font-size: 23px;">Adventures in C++, iOS, Unix, and the biggest of all..Life!.</p>
@@ -62,21 +74,27 @@
         </div>
       </div>
     </section>
-    <section id="xxx">
-
-      <div class="container">
-        <div class="row" style="margin-top: -40px; height: 25rem;">
-          <div class="col col-lg-6 col-md-6 col-sm-12 col-12" style="background-image: url(src/titlebackground.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
-            1 of 2
-          </div>
-          <div class="col col-lg-6 col-md-6 col-sm-12 col-12" style="background-color: blue; display: flex; align-items: center; justify-content: center;">
-            <div class="yyy" style="width: 90%; height: 80%; background-color: pink;">
-
-            </div>
-          </div>
-        </div>
+    <section id="secAbout">
+      <div class="about">
+        <h2>About Me</h2>
+        <hr style="width: 40%; margin: auto;">
+        <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure to the underlying concepts and applying them vividly to various projects, my love for these domains came into being. I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.</p>
+        <a href="#" class="btns">Download CV</a>
       </div>
-
+    </section>
+    <section style="height: 60vh; background-color: grey;">
+      <div class="">
+        <h2>About me</h2>
+        <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure to the underlying concepts and applying them vividly to various projects, my love for these domains came into being. I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.</p>
+        <a href="#">LINK</a>
+      </div>
+    </section>
+    <section style="height: 60vh;">
+      <div class="">
+        <h2>About me</h2>
+        <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure to the underlying concepts and applying them vividly to various projects, my love for these domains came into being. I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.</p>
+        <a href="#">LINK</a>
+      </div>
     </section>
 
   </div>
