project div implemented

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
               <a class="nav-link" href="#secAbout">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Skills</a>
+              <a class="nav-link" href="#secProject">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Projects</a>
+              <a class="nav-link" href="#">Skills</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Education</a>
@@ -64,7 +64,7 @@
     <section id="titleBack" class="titleBackground">
       <div class="innerTitle">
         <h1 style="color:white; font-size: 57px;">Hello, I’m Aditya</h1>
-        <p style="color:white; font-size: 23px;">Adventures in C++, iOS, Unix, and the biggest of all..Life!.</p>
+        <p style="color:white; font-size: 23px;">Adventures in C++, iOS, Unix, and the biggest of all..Life!. Adventures in C++, iOS, Unix, and the biggest of all..Life!. Adventures in C++, iOS, Unix, and the biggest of all..Life!.</p>
         <div class="centerdiv">
           <a class="icons" href="#"><i class="fab fa-2x fa-facebook-f"></i></a>
           <a class="icons" href="#"><i class="fab fa-2x fa-twitter"></i></a>
@@ -76,30 +76,96 @@
     </section>
     <section id="secAbout">
       <div class="about">
-        <h2>About Me</h2>
-        <hr style="width: 40%; margin: auto;">
-        <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure to the underlying concepts and applying them vividly to various projects, my love for these domains came into being. I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.</p>
+        <h2 class="h2Headings">About Me</h2>
+        <hr class="hrDesign">
+        <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure to the underlying concepts and applying them vividly to various projects, my love for these domains came
+          into being. I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.</p>
         <a href="#" class="btns">Download CV</a>
       </div>
     </section>
-    <section style="height: 60vh; background-color: grey;">
-      <div class="">
-        <h2>About me</h2>
-        <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure to the underlying concepts and applying them vividly to various projects, my love for these domains came into being. I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.</p>
-        <a href="#">LINK</a>
+    <section id="secProject">
+      <div class="projects">
+        <div class="projss">
+          <h2 class="h2Headings">Projects</h2>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+              <hr class="hrDesign">
+              <div class="projectDiv">
+                <h3 class="h3Design">Daily Cases Report</h3>
+                <p class="project_P"> I have Developed and Published an android application "Daily Cases Report" using REST APIs.</p>
+                <p class="project_P"> In this application the main focus is on the Implementation of API calls.</p>
+                <p class="project_P"> This android application acts as a portal for the public to keep track of COVID-19, alongside collecting data for further analysis with 85% accuracy.</p>
+                <p class="project_P"><span class="project_span">Tech Stack:</span> Java, Android, XML, JSON, RESTful API, Picasso Library, Recyclerview.</p>
+                <div class="project_centerdiv">
+                  <a class="project_icon_div" href="https://github.com/adityagalande"><i class="fab fa-2x fa-github"></i></a>
+                  <a class="project_icon_div" href="https://play.google.com/store/apps/details?id=com.daily_cases_report.android"><i class="fab fa-2x fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+              <hr class="hrDesign">
+              <div class="projectDiv">
+                <h3 class="h3Design">Daily Cases Report</h3>
+                <p class="project_P"> I have Developed and Published an android application "Daily Cases Report" using REST APIs.</p>
+                <p class="project_P"> In this application the main focus is on the Implementation of API calls.</p>
+                <p class="project_P"> This android application acts as a portal for the public to keep track of COVID-19, alongside collecting data for further analysis with 85% accuracy.</p>
+                <p class="project_P"><span class="project_span">Tech Stack:</span> Java, Android, XML, JSON, RESTful API, Picasso Library, Recyclerview.</p>
+                <div class="project_centerdiv">
+                  <a class="project_icon_div" href="https://github.com/adityagalande"><i class="fab fa-2x fa-github"></i></a>
+                  <a class="project_icon_div" href="https://play.google.com/store/apps/details?id=com.daily_cases_report.android"><i class="fab fa-2x fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+              <hr class="hrDesign">
+              <div class="projectDiv">
+                <h3 class="h3Design">Daily Cases Report</h3>
+                <p class="project_P"> I have Developed and Published an android application "Daily Cases Report" using REST APIs.</p>
+                <p class="project_P"> In this application the main focus is on the Implementation of API calls.</p>
+                <p class="project_P"> This android application acts as a portal for the public to keep track of COVID-19, alongside collecting data for further analysis with 85% accuracy.</p>
+                <p class="project_P"><span class="project_span">Tech Stack:</span> Java, Android, XML, JSON, RESTful API, Picasso Library, Recyclerview.</p>
+                <div class="project_centerdiv">
+                  <a class="project_icon_div" href="https://github.com/adityagalande"><i class="fab fa-2x fa-github"></i></a>
+                  <a class="project_icon_div" href="https://play.google.com/store/apps/details?id=com.daily_cases_report.android"><i class="fab fa-2x fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+              <hr class="hrDesign">
+              <div class="projectDiv">
+                <h3 class="h3Design">Daily Cases Report</h3>
+                <p class="project_P"> I have Developed and Published an android application "Daily Cases Report" using REST APIs.</p>
+                <p class="project_P"> In this application the main focus is on the Implementation of API calls.</p>
+                <p class="project_P"> This android application acts as a portal for the public to keep track of COVID-19, alongside collecting data for further analysis with 85% accuracy.</p>
+                <p class="project_P"><span class="project_span">Tech Stack:</span> Java, Android, XML, JSON, RESTful API, Picasso Library, Recyclerview.</p>
+                <div class="project_centerdiv">
+                  <a class="project_icon_div" href="https://github.com/adityagalande"><i class="fab fa-2x fa-github"></i></a>
+                  <a class="project_icon_div" href="https://play.google.com/store/apps/details?id=com.daily_cases_report.android"><i class="fab fa-2x fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
       </div>
     </section>
     <section style="height: 60vh;">
       <div class="">
-        <h2>About me</h2>
-        <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure to the underlying concepts and applying them vividly to various projects, my love for these domains came into being. I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.</p>
+        <h2 class="h2Headings">About me</h2>
+        <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure to the underlying concepts and applying them vividly to various projects, my love for these domains came
+          into being. I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.</p>
         <a href="#">LINK</a>
       </div>
     </section>
 
   </div>
   <footer>
-
+    
   </footer>
   <script src="index.js" charset="utf-8"></script>
 </body>
