new section created

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a class="nav-link" href="#secProject">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Skills</a>
+              <a class="nav-link" href="#secSkills">Skills</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Education</a>
@@ -44,17 +44,6 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
             </li>
-            <!-- <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About me</a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Who I'm</a></li>
-                <li><a class="dropdown-item" href="#">Qualification</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Contact me</a></li>
-              </ul>
-            </li> -->
           </ul>
         </div>
       </div>
@@ -74,6 +63,9 @@
         </div>
       </div>
     </section>
+
+    <!-- ______________________________________________________ABOUT_______________________________________________________-->
+
     <section id="secAbout">
       <div class="about">
         <h2 class="h2Headings">About Me</h2>
@@ -83,6 +75,9 @@
         <a href="#" class="btns">Download CV</a>
       </div>
     </section>
+
+    <!-- ______________________________________________________PROJECT_______________________________________________________-->
+
     <section id="secProject">
       <div class="projects">
         <div class="projss">
@@ -114,8 +109,8 @@
                 <p class="project_P"> This android application acts as a portal for the public to keep track of COVID-19, alongside collecting data for further analysis with 85% accuracy.</p>
                 <p class="project_P"><span class="project_span">Tech Stack:</span> Java, Android, XML, JSON, RESTful API, Picasso Library, Recyclerview.</p>
                 <div class="project_centerdiv">
-                  <a class="project_icon_div" href="https://github.com/adityagalande"><i class="fab fa-2x fa-github"></i></a>
-                  <a class="project_icon_div" href="https://play.google.com/store/apps/details?id=com.daily_cases_report.android"><i class="fab fa-2x fa-github"></i></a>
+                  <a class="project_icon_div" href="https://github.com/adityagalande/android-Covid-Update"><i class="fab fa-2x fa-github"></i></a>
+                  <a class="project_icon_div" href="https://play.google.com/store/apps/details?id=com.daily_cases_report.android"><i class="fab fa-2x fa-google-play"></i></a>
                 </div>
               </div>
             </div>
@@ -154,18 +149,123 @@
         </div>
       </div>
     </section>
-    <section style="height: 60vh;">
-      <div class="">
-        <h2 class="h2Headings">About me</h2>
-        <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure to the underlying concepts and applying them vividly to various projects, my love for these domains came
-          into being. I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.</p>
-        <a href="#">LINK</a>
+
+    <!-- ______________________________________________________SKILLS_______________________________________________________-->
+
+    <section id="secSkills">
+      <div class="skills">
+        <h2 class="h2Headings">Skills</h2>
+
+
+        <hr class="hrDesignTwo">
+        <h3 class="h3Design">Languages</h3>
+        <div class="svgDiv">
+          <div>
+            <img class="svgImg" src="src/svg/c.svg" alt="">
+            <h4 class="h4Design">C++</h4>
+          </div>
+          <div>
+            <img class="svgImg" src="src/svg/java.svg" alt="">
+            <h4 class="h4Design">JAVA</h4>
+          </div>
+          <div>
+            <img class="svgImg" src="src/svg/javascript.svg" alt="">
+            <h4 class="h4Design">JavaScript</h4>
+          </div>
+          <div>
+            <img class="svgImg" src="src/svg/php.svg" alt="">
+            <h4 class="h4Design">PHP</h4>
+          </div>
+        </div>
+
+
+        <hr class="hrDesignTwo">
+        <h3 class="h3Design">Frontend</h3>
+        <div class="svgDiv">
+          <div>
+            <img class="svgImg" src="src/svg/react.svg" alt="">
+            <h4 class="h4Design">React</h4>
+          </div>
+          <div>
+            <img class="svgImg" src="src/svg/html.svg" alt="">
+            <h4 class="h4Design">HTML</h4>
+          </div>
+          <div>
+            <img class="svgImg" src="src/svg/css.svg" alt="">
+            <h4 class="h4Design">CSS</h4>
+          </div>
+          <div>
+            <img class="svgImg" src="src/svg/xml.svg" alt="">
+            <h4 class="h4Design">XML(android)</h4>
+          </div>
+        </div>
+
+
+        <hr class="hrDesignTwo">
+        <h3 class="h3Design">Backend & Database</h3>
+        <div class="svgDiv">
+          <div>
+            <img class="svgImg" src="src/svg/nodejs.svg" alt="">
+            <h4 class="h4Design">Node JS</h4>
+          </div>
+          <div>
+            <img class="svgImg" src="src/svg/firebase.svg" alt="">
+            <h4 class="h4Design">Firebase</h4>
+          </div>
+          <div>
+            <img class="svgImg" src="src/svg/mysql.svg" alt="">
+            <h4 class="h4Design">MySQL</h4>
+          </div>
+          <div>
+            <img class="svgImg" src="src/svg/sqlite.svg" alt="">
+            <h4 class="h4Design">SQLite</h4>
+          </div>
+          <div>
+            <img class="svgImg" src="src/svg/postgresql.svg" alt="">
+            <h4 class="h4Design">PostgreSQL</h4>
+          </div>
+          <div>
+            <img class="svgImg" src="src/svg/mongodb.svg" alt="">
+            <h4 class="h4Design">Mongo DB</h4>
+          </div>
+        </div>
+
+
+        <hr class="hrDesignTwo">
+        <h3 class="h3Design">Tools</h3>
+        <div class="svgDiv">
+          <div>
+            <img class="svgImg" src="src/svg/git.svg" alt="">
+            <h4 class="h4Design">Git</h4>
+          </div>
+          <div>
+            <img class="svgImg" src="src/svg/github.svg" alt="">
+            <h4 class="h4Design">GitHub</h4>
+          </div>
+          <div>
+            <img class="svgImg" src="src/svg/postman.svg" alt="">
+            <h4 class="h4Design">Postman API</h4>
+          </div>
+          <div>
+            <img class="svgImg" src="src/svg/heroku.svg" alt="">
+            <h4 class="h4Design">Heroku</h4>
+          </div>
+          <div>
+            <img class="svgImg" src="src/svg/docker.svg" alt="">
+            <h4 class="h4Design">Docker</h4>
+          </div>
+        </div>
       </div>
+    </section>
+
+
+    <section style="height: 40vh; background-color: #f9f9f9;">
+
     </section>
 
   </div>
   <footer>
-    
+
   </footer>
   <script src="index.js" charset="utf-8"></script>
 </body>
