--- a/index.html
+++ b/index.html
@@ -198,6 +198,14 @@
             <img class="svgImg" src="src/svg/xml.svg" alt="">
             <h4 class="h4Design">XML(android)</h4>
           </div>
+          <div>
+            <img class="svgImg" src="src/svg/bootstrap.svg" alt="">
+            <h4 class="h4Design">bootstrap</h4>
+          </div>
+          <div>
+            <img class="svgImg" src="src/svg/jquery.svg" alt="">
+            <h4 class="h4Design">jQuery</h4>
+          </div>
         </div>
 
 
