--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <nav class="navbar py-3 fixed-top navbar-expand-lg navbar-dark bg-transparent">
+    <nav id="navigationBar" class="navbar py-3 fixed-top navbar-expand-lg  navbar-dark">
       <div class="container">
         <!-- <a style="font-size: 28px; font-weight: 600;" class="navbar-brand mb-0" href="#">ADITYA GALANDE</a> -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
