--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
       <div class="innerTitle">
         <h1>Aditya Galande</h1>
         <h2>I'm a <span class="animate"></span></h2>
-        <p>Adventures in C++, iOS, Unix, and the biggest of all..Life!. Adventures in C++, iOS, Unix, and the biggest of all..Life!. Adventures in C++, iOS, Unix, and the biggest of all..Life!.</p>
+        <p>Adventures in C++, iOS, Unix, and the biggest of all..Life!. Adventures in C++, iOS, Unix, and the biggest of all..Life!.</p>
         <div class="centerdiv">
-          <a class="icons" href="#"><i class="fab fa-2x fa-facebook-f"></i></a>
-          <a class="icons" href="#"><i class="fab fa-2x fa-twitter"></i></a>
-          <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-2x fa-instagram"></i></a>
-          <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-2x fa-github"></i></a>
-          <a class="icons" href="https://www.linkedin.com/in/adityagalande/"><i class="fab fa-2x fa-linkedin-in"></i></a>
+          <a class="icons" href="#"><i class="fab fa-facebook-f"></i></a>
+          <a class="icons" href="#"><i class="fab fa-twitter"></i></a>
+          <a class="icons" href="https://www.instagram.com/aditygalande/"><i class="fab fa-instagram"></i></a>
+          <a class="icons" href="https://github.com/adityagalande"><i class="fab fa-github"></i></a>
+          <a class="icons" href="https://www.linkedin.com/in/adityagalande/"><i class="fab fa-linkedin-in"></i></a>
         </div>
       </div>
     </section>
