--- a/index.html
+++ b/index.html
@@ -79,11 +79,12 @@
 
     <!-- ______________________________________________________PROJECT_______________________________________________________-->
 
-    <section id="secProject">
-      <div class="projects">
-        <div class="projss">
-          <h2 class="h2Headings">Projects</h2>
-        </div>
+
+    <section id="secAbout" style="background-color: #f9f9f9;">
+      <div class="about">
+        <h2 class="h2Headings">Projects</h2>
+        <hr class="hrDesign">
+
         <div class="container">
           <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
@@ -148,6 +149,7 @@
 
           </div>
         </div>
+
       </div>
     </section>
 
