--- a/index.html
+++ b/index.html
@@ -272,13 +272,46 @@
     <!-- ______________________________________________________EDUCATION_______________________________________________________-->
 
     <section id="secEducation">
-      <div class="projects">
+      <!-- <div class="projects">
         <div class="projss">
           <h2 class="h2Headings">Education</h2>
+        </div> -->
+
+        <div class="about">
+          <h2 class="h2Headings">Education</h2>
+          <hr class="hrDesign">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <hr class="hrDesign">
+                <div class="projectDiv">
+                  <img class="eduLogo" src="src/kbpLogo.png" alt="">
+                  <p class="project_P"><span>Maharashtra State Board of Technical Education</span></p>
+                  <p class="project_P">Diploma in Computer Technology.</p>
+                  <p class="project_P">Grade - First Class with Distinction.</p>
+                  <p class="project_P">July 2017 - May 2019</p>
+                  <p class="project_P"><span>Activities & societies</span> - Event Organization Team.</p>
+                  <p class="project_P"><span>Coursework</span> - Data Structures, Database Management, Object Oriented Programming, Software Testing.</p>
+                </div>
+              </div>
+
+              <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <hr class="hrDesign">
+                <div class="projectDiv">
+                  <img class="eduLogo" src="src/sppuLogo.png" alt="">
+                  <p class="project_P"><span>Savitribai Phule Pune University</span></p>
+                  <p class="project_P">Bachelor of Engineering - Computer Engineering.</p>
+                  <p class="project_P">Grade - 8.76 cgpa</p>
+                  <p class="project_P">July 2019 - May 2022</p>
+                  <p class="project_P"><span>Activities</span> - The Board Member of NSS and organised many events on college campus.</p>
+                  <p class="project_P"><span>Coursework</span> - Data Structures, Software Engineering, Artificial Intelligence, Object Oriented Modeling and Design, Software Testing and Quality Assurance.</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
-
-        <div class="container">
+        <!-- <div class="container">
           <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
               <hr class="hrDesign">
@@ -306,7 +339,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
