--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         </div> -->
 
         <div class="about">
-          <h2 class="h2Headings">Education</h2>
+          <h2 class="h2Headings" style="line-height: 2.7;">Education</h2>
           <hr class="hrDesign">
           <div class="container">
             <div class="row">
@@ -347,7 +347,34 @@
 <!-- ______________________________________________________EXPERIENCE_______________________________________________________-->
 
     <section id="secExperience">
-      <div class="projects">
+
+      <div class="about">
+        <h2 class="h2Headings">Experience</h2>
+        <hr class="hrDesign">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+              <hr class="hrDesign">
+              <div class="projectDiv">
+                <p class="project_P">
+                <h3><span>APTRON Solutions Pvt. Ltd.</span></h3>
+                </p>
+                <p class="project_P">May 2018 - June 2018</p>
+                <p class="project_P">Project Developer</p>
+                <ul>
+                  <li>Developed and implemented algorithm for detection and classification problem using deep learning algorithms.</li>
+                  <li>Designed pipeline of the whole project to get it incorporated in the product of the company. Created visualization tool for the project which gives the detailed outcome of error analysis.</li>
+                  <li>Implemented multiprocessing pipeline between different modules which efficiently reduced the memory consumption and improved processing speed.</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+      <!-- <div class="projects">
         <div class="projss">
           <h2 class="h2Headings">Experience</h2>
         </div>
@@ -371,7 +398,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </section>
   </div>
 
